src/test/deca/syntax/invalid/class/decl_method_dans_main.deca
/*
	Description: declaration une methode dans main

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



{
	

	 void hello( ){
	  	print("hello");
	}
	


}
